--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<p>POraaaaaaaaa</p>
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfólio - Web</title>
+</head>
+<body>
+    <header class="cabecalho">
+        <div class="container1">
+            <img src="../img/Vector.svg" alt="Logo">
+            <nav>
+                <a href="#">Comunidade</a>
+                <a href="#">Tutorial</a>
+                <a href="#">Open Source</a>
+                <a href="#">Comandos</a>
+            </nav>
+        </div>     
+    </header>
+
+    <main class="">
+        <section>
+
+        </section>
+        <section>
+
+        </section>
+    </main>
+
+    <footer>
+
+    </footer>
+</body>
+</html>
