Finalização da página HTML

--- a/index.html
+++ b/index.html
@@ -18,17 +18,26 @@
         </div>     
     </header>
 
-    <main class="">
+    <main class="container2">
         <section>
-
+            <div>
+                <h1>Balle Bot</h1>
+                <h2>Deixe sua comunidade segura de um jeito fácil!</h2>
+                <button>Me adicione</button>
+            </div>
+            <img src="../img/Group 4.svg" alt="Balle Bot">
         </section>
+            
         <section>
-
+            <h3>O que ela faz por você?</h3>
+            <p>1. Cria um sistema de verificação capcha para novos membros garantirem que não são robôs</p>
+            <p>2. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum rem, sunt qui fugit a </p>
+            <p>3. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla consectetur quis exerdwc</p>
         </section>
     </main>
 
     <footer>
-
+        <img src="../img/BALLERINI.svg" alt="Ballerini">
     </footer>
 </body>
 </html>
