Finalização do css e da página

--- a/index.html
+++ b/index.html
@@ -4,40 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio - Web</title>
+    <link rel="stylesheet" href="../Css/style.css">
 </head>
 <body>
     <header class="cabecalho">
-        <div class="container1">
-            <img src="../img/Vector.svg" alt="Logo">
-            <nav>
-                <a href="#">Comunidade</a>
-                <a href="#">Tutorial</a>
-                <a href="#">Open Source</a>
-                <a href="#">Comandos</a>
-            </nav>
-        </div>     
+            <img class="img-cabecalho" src="../img/Vector.svg" alt="Logo">
+            <nav class="menu-cabecalho">
+                <a class="item-cabecalho" href="#">Comunidade</a>
+                <a class="item-cabecalho" href="#">Tutorial</a>
+                <a class="item-cabecalho" href="#">Open Source</a>
+                <a class="item-cabecalho" href="#">Comandos</a>
+            </nav>     
     </header>
 
-    <main class="container2">
-        <section>
-            <div>
-                <h1>Balle Bot</h1>
-                <h2>Deixe sua comunidade segura de um jeito fácil!</h2>
-                <button>Me adicione</button>
+    <main class="conteudo">
+        <section class="conteudo1">
+            <div class="texto-conteudo">
+                <h1 class="titulo-conteudo">Balle Bot</h1>
+                <h2 class="subtitulo-conteudo">Deixe sua comunidade segura de um jeito fácil!</h2>
+                <button class="botao-conteudo">Me adicione!</button>
             </div>
-            <img src="../img/Group 4.svg" alt="Balle Bot">
+            <img class="imagem-conteudo" src="../img/Group 4.svg" alt="Balle Bot">
         </section>
             
-        <section>
-            <h3>O que ela faz por você?</h3>
-            <p>1. Cria um sistema de verificação capcha para novos membros garantirem que não são robôs</p>
-            <p>2. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum rem, sunt qui fugit a </p>
-            <p>3. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla consectetur quis exerdwc</p>
+        <section class="conteudo2">
+            <h3 class="conteudo2-titulo">O que ela faz por você?</h3>
+            <p class="conteudo2-p">1. Cria um sistema de verificação capcha para novos membros garantirem que não são robôs</p>
+            <p class="conteudo2-p">2. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum rem, sunt qui fugit a </p>
+            <p class="conteudo2-p">3. Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla consectetur quis exerdwc</p>
         </section>
     </main>
 
-    <footer>
-        <img src="../img/BALLERINI.svg" alt="Ballerini">
+    <footer class="rodape">
+        <img class="rodape-img" src="../img/BALLERINI.svg" alt="Ballerini">
     </footer>
 </body>
 </html>
